--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-paginate": "^8.1.0",
+    "react-pdf": "^5.7.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-text-truncate": "^0.17.0",
